RESOLVED FIXED 212628
REGRESSION (r258949): Dynamic user accent color changes are not respected by WKWebView
https://bugs.webkit.org/show_bug.cgi?id=212628
Summary REGRESSION (r258949): Dynamic user accent color changes are not respected by ...
Tim Horton
Reported 2020-06-02 00:39:26 PDT
REGRESSION (r258949): Dynamic user accent color changes are not respected by WKWebView
Attachments
Patch (4.99 KB, patch)
2020-06-02 00:40 PDT, Tim Horton
no flags
Patch (5.07 KB, patch)
2020-06-02 01:45 PDT, Tim Horton
pvollan: review+
Tim Horton
Comment 1 2020-06-02 00:40:03 PDT
Tim Horton
Comment 2 2020-06-02 00:40:05 PDT
Tim Horton
Comment 3 2020-06-02 01:45:46 PDT
Per Arne Vollan
Comment 4 2020-06-02 08:35:32 PDT
Comment on attachment 400796 [details] Patch Thanks for fixing this! R=me.
Tim Horton
Comment 5 2020-06-02 10:09:52 PDT
Darin Adler
Comment 6 2020-06-02 10:55:04 PDT
Comment on attachment 400796 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=400796&action=review > Source/WebKit/WebProcess/cocoa/WebProcessCocoa.mm:926 > +static const WTF::String& userAccentColorPreferenceKey() > +{ > + static NeverDestroyed<WTF::String> userAccentColorPreferenceKey(MAKE_STATIC_STRING_IMPL("AppleAccentColor")); > + return userAccentColorPreferenceKey; > +} Possible future tidying step. Seems like this could return a const char* or an ASCIILiteral instead. No need for a NeverDestroyed, and comparing a WTF::String is not faster with another WTF::String than it is with a const char*. Or this could be userAccentColorPreferenceKey() instead.
Tim Horton
Comment 7 2020-06-02 11:04:11 PDT
(In reply to Darin Adler from comment #6) > Comment on attachment 400796 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=400796&action=review > > > Source/WebKit/WebProcess/cocoa/WebProcessCocoa.mm:926 > > +static const WTF::String& userAccentColorPreferenceKey() > > +{ > > + static NeverDestroyed<WTF::String> userAccentColorPreferenceKey(MAKE_STATIC_STRING_IMPL("AppleAccentColor")); > > + return userAccentColorPreferenceKey; > > +} > > Possible future tidying step. Seems like this could return a const char* or > an ASCIILiteral instead. No need for a NeverDestroyed, and comparing a > WTF::String is not faster with another WTF::String than it is with a const > char*. > > Or this could be userAccentColorPreferenceKey() instead. Heh, I followed what we did with all of our generated preference keys. OK! This is good to know.
Note You need to log in before you can comment on or make changes to this bug.